configs/web-deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2025-07-04T15:18:50Z","generation":3,"labels":{"app":"synergychat-web"},"name":"synergychat-web","namespace":"default","resourceVersion":"20484","uid":"81e50fca-7cd2-4722-ba82-5e849c94aa86"},"spec":{"progressDeadlineSeconds":600,"relicas":10,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"synergychat-web"}},"strategy":{"rollingUpdate":{"maxSurge [...]
    creationTimestamp: "2025-07-04T15:18:50Z"
    generation: 4
    labels:
      app: synergychat-web
    name: synergychat-web
    namespace: default
    resourceVersion: "21642"
    uid: 81e50fca-7cd2-4722-ba82-5e849c94aa86
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: synergychat-web
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: synergychat-web
      spec:
        containers:
        - image: docker.io/bootdotdev/synergychat-web:latest
          imagePullPolicy: Always
          name: synergychat-web
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 10
    conditions:
    - lastTransitionTime: "2025-07-04T15:18:50Z"
      lastUpdateTime: "2025-07-04T15:18:55Z"
      message: ReplicaSet "synergychat-web-f765d99db" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-07-04T21:20:05Z"
      lastUpdateTime: "2025-07-04T21:20:05Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 10
    replicas: 10
    updatedReplicas: 10
kind: List
metadata:
  resourceVersion: ""
