configs/myapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nginx-service
spec:
  selector:
    app: myapp-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
