configs/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: myapp-nginx-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.hessifer.me`)
      kind: Rule
      services:
        - name: myapp-nginx-service
          port: 80
